--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
             <div class="swiper-slide">
               <article class="product-card">
                 <div class="product-media">
-                  <img src="https://images.unsplash.com/photo-1564936286455-8f1c4f0b1c2e?q=80&w=1400&auto=format&crop=entropy&cs=tinysrgb" alt="Șuncă tradițională" loading="lazy">
+                  <img src="https://i.ibb.co/QR8GKZJ/sunca-Grasu.jpg" alt="Șuncă tradițională" loading="lazy">
                 </div>
                 <div class="product-body">
                   <h3 class="product-title">Șuncă Afumată</h3>
@@ -688,7 +688,7 @@
             <div class="swiper-slide">
               <article class="product-card">
                 <div class="product-media">
-                  <img src="https://images.unsplash.com/photo-1542834369-f10ebf06d3cb?q=80&w=1400&auto=format&crop=entropy&cs=tinysrgb" alt="Platou mezeluri" loading="lazy">
+                  <img src="https://i.ibb.co/gLgvvjmG/platou-La-Grasu.jpg" alt="Platou mezeluri" loading="lazy">
                 </div>
                 <div class="product-body">
                   <h3 class="product-title">Platou Mixt Premium</h3>
@@ -722,6 +722,12 @@
           </div>
           <div class="gallery-item reveal">
             <img src="https://i.ibb.co/fd8FNd4m/bg4.jpg" alt="Galerie Mezeluri la Grasu 4" loading="lazy">
+          </div>
+          <div class="gallery-item reveal">
+            <img src="https://i.ibb.co/QR8GKZJ/sunca-Grasu.jpg" alt="Galerie Mezeluri la Grasu 4" loading="lazy">
+          </div>
+          <div class="gallery-item reveal">
+            <img src="https://i.ibb.co/gLgvvjmG/platou-La-Grasu.jpg" alt="Galerie Mezeluri la Grasu 4" loading="lazy">
           </div>
         </div>
       </div>
