--- a/index.html
+++ b/index.html
@@ -217,19 +217,25 @@
     }
     
     .logo-box{
-      width:130px; 
-      height:130px; 
+      width:280px; 
+      height:280px; 
       border-radius:20px; 
       background:linear-gradient(145deg,#fff,rgba(255,247,245,0.8)); 
       display:flex; 
       align-items:center; 
       justify-content:center; 
-      padding:10px; 
+      padding:12px; 
       border:2px solid rgba(155,43,27,0.1); 
       flex-shrink:0;
-      box-shadow:0 10px 30px rgba(0,0,0,0.08);
+      box-shadow:0 15px 40px rgba(0,0,0,0.12);
     }
-    .logo-box img{max-width:100%; max-height:100%; object-fit:contain; border-radius:12px}
+    .logo-box img{
+      width:100%; 
+      height:100%; 
+      object-fit:contain; 
+      border-radius:12px;
+      filter: contrast(1.1) saturate(1.1);
+    }
     
     .hero-title{
       font-size:2.75rem; 
@@ -510,7 +516,7 @@
       .hero-title{ font-size:2rem }
       .hero-inner{ gap:1.5rem }
       .hero-card{flex-direction:column; align-items:center; text-align:center; padding:2rem}
-      .logo-box{width:100px; height:100px}
+      .logo-box{width:220px; height:220px; padding:8px}
       .section-title{font-size:2rem}
       .features{justify-content:center}
       .product-media{height:220px}
@@ -724,10 +730,10 @@
             <img src="https://i.ibb.co/fd8FNd4m/bg4.jpg" alt="Galerie Mezeluri la Grasu 4" loading="lazy">
           </div>
           <div class="gallery-item reveal">
-            <img src="https://i.ibb.co/QR8GKZJ/sunca-Grasu.jpg" alt="Galerie Mezeluri la Grasu 4" loading="lazy">
+            <img src="https://i.ibb.co/QR8GKZJ/sunca-Grasu.jpg" alt="Galerie Mezeluri la Grasu 5" loading="lazy">
           </div>
           <div class="gallery-item reveal">
-            <img src="https://i.ibb.co/gLgvvjmG/platou-La-Grasu.jpg" alt="Galerie Mezeluri la Grasu 4" loading="lazy">
+            <img src="https://i.ibb.co/gLgvvjmG/platou-La-Grasu.jpg" alt="Galerie Mezeluri la Grasu 6" loading="lazy">
           </div>
         </div>
       </div>
